[package]
name = "lokal-rs"
version = "0.0.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.2", features = ["full"] }
rand = "0.8.5"
colored = "2.1.0"
semver = "1.0.23"