[package]
name = "lokal-rs"
version = "0.0.1"
edition = "2021"
authors = ["Rubi Jihantoro <jihantoro8@gmail.com>"]
description = "Rust crates for interacting with Lokal.so Client REST API"
documentation = "https://docs.rs/lokal-rs"
readme = "README.md"
homepage = "https://lokal.so/?ref=rust-crates"
repository = "https://github.com/lokal-so/lokal-rs"
license = "MIT"
license-file = "LICENSE"
keywords = ["tunnel", "tunneling", "networking", "http", "http-debugging"]
categories = ["development-tools"]

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.2", features = ["full"] }
rand = "0.8.5"
colored = "2.1.0"
semver = "1.0.23"